Avoid 'jumps' caused by plone grid media-specific width for .content

--- a/src/plonetheme/eeq/theme/less/custom.less
+++ b/src/plonetheme/eeq/theme/less/custom.less
@@ -606,6 +606,9 @@ body.portaltype-event {
   .newsImageContainer figcaption {
     display: block;
   }
+  .container {
+      width: 100%;
+  }
 }
 
 /* Responsive breakpoint statements
